--- a/.github/workflows/fetch-rust-skins.yml
+++ b/.github/workflows/fetch-rust-skins.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Updated to newer Python version
+          python-version: '3.11'
           
       - name: Install dependencies
         run: |
@@ -36,10 +36,10 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data/skins.json
+          git add docs/public/data/scmm.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "Update Rust skins data [skip ci]"
+            git commit -m "Update Rust skins data (SCMM) [skip ci]"
             git push
           fi 
